[package]
name = "qu-derive"
description = "internal part of qu crate"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.14", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.8"
