[package]
name = "qu-derive"
description = "internal part of qu crate"
version = "0.3.3"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/derekdreery/qu"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
log = "0.4.14"
